syntax = "proto3";

import "google/protobuf/struct.proto";

option go_package = "internal/proto";
package agent;

service AgentService {
  rpc StartTask (StartTaskRequest) returns (StartTaskResponse);
  rpc StopTask (TaskActionRequest) returns (TaskActionResponse);
  rpc PauseTask (TaskActionRequest) returns (TaskActionResponse);
  rpc ResumeTask (TaskActionRequest) returns (TaskActionResponse);
}

message StartTaskRequest {
  string task_id = 1;
  google.protobuf.Struct parameters = 2;
}

message StartTaskResponse {
  bool success = 1;
  string message = 2;
  string execution_id = 3;
}

message TaskActionRequest {
  string execution_id = 1;
}

message TaskActionResponse {
  bool success = 1;
  string message = 2;
}